Add EigenvalueRatioConstraint class for EMFit.

--- a/src/mlpack/methods/gmm/CMakeLists.txt
+++ b/src/mlpack/methods/gmm/CMakeLists.txt
@@ -9,6 +9,7 @@ set(SOURCES
   no_constraint.hpp
   positive_definite_constraint.hpp
   diagonal_constraint.hpp
+  eigenvalue_ratio_constraint.hpp
 )
 
 # Add directory name to sources.
