--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -171,7 +171,7 @@ include_directories(${LIBXML2_INCLUDE_DIR})
 # updated as time goes on and new versions are released.
 set(Boost_ADDITIONAL_VERSIONS
   "1.49.0" "1.50.0" "1.51.0" "1.52.0" "1.53.0" "1.54.0" "1.55.0")
-find_package(Boost
+find_package(Boost 1.49
     COMPONENTS
       program_options
       unit_test_framework
