First pass -- move files to match naming policy, change initialize() to Initialize(), standardize comment formatting, fix some Doxygen commands.  No serious functionality changes.

--- a/src/mlpack/methods/perceptron/learning_policies/CMakeLists.txt
+++ b/src/mlpack/methods/perceptron/learning_policies/CMakeLists.txt
@@ -1,7 +1,7 @@
 # Define the files we need to compile
 # Anything not in this list will not be compiled into MLPACK.
 set(SOURCES
-  SimpleWeightUpdate.hpp
+  simple_weight_update.hpp
 )
 
 # Add directory name to sources.
