* added SVD Incomplete incremental learning * added Termination Policy wrapper for SVD Incomplete Learning

--- a/src/mlpack/methods/amf/update_rules/CMakeLists.txt
+++ b/src/mlpack/methods/amf/update_rules/CMakeLists.txt
@@ -4,6 +4,8 @@ set(SOURCES
   nmf_als.hpp
   nmf_mult_dist.hpp
   nmf_mult_div.hpp
+  svd_batchlearning.hpp
+  svd_incremental_learning.hpp
 )
 
 # Add directory name to sources.
