* Added convergence test for SVDBatch and SVDIncremental learning

--- a/src/mlpack/tests/CMakeLists.txt
+++ b/src/mlpack/tests/CMakeLists.txt
@@ -51,6 +51,7 @@ add_executable(mlpack_test
   tree_traits_test.cpp
   union_find_test.cpp
   svd_batch_test.cpp
+  svd_incremental_test.cpp
 )
 # Link dependencies of test executable.
 target_link_libraries(mlpack_test
