--- a/src/mlpack/tests/CMakeLists.txt
+++ b/src/mlpack/tests/CMakeLists.txt
@@ -40,6 +40,7 @@ add_executable(mlpack_test
   radical_test.cpp
   range_search_test.cpp
   rectangle_tree_test.cpp
+  regularized_svd_test.cpp
   sa_test.cpp
   save_restore_utility_test.cpp
   sgd_test.cpp
