--- a/src/mlpack/core/tree/CMakeLists.txt
+++ b/src/mlpack/core/tree/CMakeLists.txt
@@ -42,6 +42,10 @@ set(SOURCES
   rectangle_tree/r_tree_descent_heuristic_impl.hpp
   rectangle_tree/r_star_tree_descent_heuristic.hpp
   rectangle_tree/r_star_tree_descent_heuristic_impl.hpp
+  rectangle_tree/r_star_tree_split.hpp
+  rectangle_tree/r_star_tree_split_impl.hpp
+  rectangle_tree/x_tree_split.hpp
+  rectangle_tree/x_tree_split_impl.hpp
   statistic.hpp
   traversal_info.hpp
   tree_traits.hpp
